--- a/assert/css/style.css
+++ b/assert/css/style.css
@@ -1,10 +1,8 @@
 body {
-  background-image: url(bg1.jpg);
-  background-repeat: no-repeat;
+  background-image:url(../bg1.jpg) ;
   background-attachment: fixed;
   background-size: cover;
   font-family: "Montserrat", sans-serif;
-  background-color: #000;
   color: #fff;
   margin: 0;
 }
@@ -129,6 +127,7 @@ p {
 
 li {
   color: #ffffff;
+  
 }
 
 
@@ -138,4 +137,7 @@ li {
 .event-card a{
   text-decoration: none;
   
+}
+.rule-title{
+  font-size: 100px;
 }
