--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url(bg1.PNG);
+  background-image: url(bg1.jpg);
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
@@ -134,4 +134,5 @@ li {
 
 .event-card button{
   border-radius: 10px;
+  
 }
