--- a/assert/css/rule-style.css
+++ b/assert/css/rule-style.css
@@ -135,3 +135,10 @@ li {
 .event-card button{
   border-radius: 10px;
 }
+.rule-title{
+  font-size: 100px;
+}
+
+.coordinators{
+  list-style-type: none;
+}
