--- a/assert/css/style.css
+++ b/assert/css/style.css
@@ -21,6 +21,17 @@ body {
     padding: 10px;
   }
 }
+.reg-button{
+  background-color: #ff5500;
+  border-radius: 50px;
+  padding: 10px 20px;
+  font-size: 15px;
+  cursor: pointer;
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  z-index: 1000;
+}
 
 @media (max-width: 576px) {
   h1 {
@@ -69,7 +80,6 @@ body {
 .event-card {
   backdrop-filter: blur(10px);
   border-radius: 10px;
-  border-color: blueviolet;
   padding: 20px;
   margin-bottom: 20px;
   text-align: center;
@@ -90,12 +100,13 @@ body {
 }
 
 h1 {
+  padding-top : 70px;
   color: #ffffff;
   font-family: "Impact", sans-serif;
   font-weight: bolder;
 }
 
-h2 {
+h2{
   color: #ffffff;
   font-family: "Impact", sans-serif;
   font-weight: bolder;
